--- a/Com.Apphb.Cia.Presentation/Content/cia-main.css
+++ b/Com.Apphb.Cia.Presentation/Content/cia-main.css
@@ -30,8 +30,8 @@ body {
  */
 
 .sub-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
 }
 
 /*
@@ -39,14 +39,28 @@ body {
  */
 
 .main {
-  padding: 20px;
+    padding: 20px;
 }
+
 @media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
+    .main {
+        padding-right: 40px;
+        padding-left: 40px;
+    }
 }
+
 .main .page-header {
-  margin-top: 0;
+    margin-top: 0;
+}
+
+.footer {
+    background-color: #222222;
+    text-align: center;
+    color: #777;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-top: 80px;
+    border-top-width: 1px;
+    border-top-color: #e5e5e5;
+    border-top-style: solid;
 }
